--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather App</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+
 </head>
 <body>
     <div class="weather-container">
-        <h1>Weather App</h1>
+        <h1>Weather App ⛅</h1>
         <div class="mainContainer">
             <input type="text" id="city" placeholder="Enter city name" required>
             
